# streamswarm

./: .replit  CHANGELOG.md  CLIENT_DEPLOYMENT.md  CLIENT_SETUP.md  DEBUG_WIFI_CLIENT.md  DEPENDENCIES.md  METRICS_ENHANCEMENT.md  README.md  REPLIT_CLIENT_SETUP.md  TUTORIAL.md  USAGE.md  WIFI_BUG_ANALYSIS.md  WIFI_DEBUG_SOLUTION.md  WIFI_ENVIRONMENTAL_SCAN_FIX.md  ai_diagnostics.py  app.py  bandwidth_diagnostic.py  client.py  config.py  cookies.txt  debug_client_logs.sh  debug_wireless.py  geolocation_service.py  gnmi_client.py  ml_diagnostics.py  models.py  pdf_generator.py  pyproject.toml  recurring_test_processor.py  replit.md  routes.py  server_geo_processor.py  setup_wifi_scanning.sh  sip_service.py  start_streamswarm_client.sh  test_handshake.py  test_iw_detection.py  test_rf_analysis.html  test_signal_fix.py  test_signal_strength.py  (+4 more)
attached_assets/: Pasted--2025-07-12-16-33-30-381-INFO-Geolocation-service-initialized-for-enhanced-network-path-analysis-1752352516485_1752352516487.txt  Pasted--2025-07-12-23-10-43-576-INFO-Geolocation-service-initialized-for-enhanced-network-path-analysis-1752376475396_1752376475396.txt  Pasted--streamswarm-env-rhuff-SWARMSTREAM-Swarm-gunicorn-bind-0-0-0-0-5000-reuse-port-reload-main-1752443336935_1752443336937.txt  Pasted--workspace-python-client-py-server-http-localhost-5000-2025-06-22-06-58-04-642-INFO-Regist-1750576522006_1750576522006.txt  Pasted-2025-07-08-06-33-41-448-INFO-Test-193-completed-2025-07-08-06-33-41-449-INFO-Signal-strength-1751971100555_1751971100556.txt  (+4 more)
ml_models/: anomaly_detector.joblib  feature_scaler.joblib  (+17 more)
(+25 files in other folders)
