[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.3",
    "openai>=1.91.0",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "reportlab>=4.4.2",
    "requests>=2.32.4",
    "scapy>=2.6.1",
    "speedtest-cli>=2.1.3",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
]
